new delimiters + bypass connection bytes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <div class="webserial w-full max-w-xl mx-auto grid grid-cols-1 gap-y-4">
     <div class="my-6"></div>
     <button id="connect" class="hidden px-4 py-3 bg-gray-800 rounded-lg">Connect to serial</button>
+    <button id="disconnect" class="hidden px-4 py-3 bg-rose-800 rounded-lg">Disconnect device</button>
 
     <div id="need-permission" class="hidden p-4 bg-rose-900 rounded-lg">
       Woooah! It seems that you need to give permission to access the serial port.
