update devices to connect or disconnect all

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webserial Core</title>
     <script src="tests/connection.arduino.ts" type="module"></script>
+    <!-- <script src="tests/multi-connection.arduino.ts" type="module"></script> -->
   </head>
   <body class="bg-neutral-950 text-white p-4 w-full">
 
